--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,9 +1,8 @@
 on: push
 name: mattwithoos/kusteval K8s validation
 jobs:
-  kubeval:
+  kusteval-pass:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: test
-      uses: instrumenta/kubeval-action@master
+    - name: Kusteval PASS test
+    - uses: mattwithoos/kusteval@master
