--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -6,4 +6,4 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Kusteval PASS test
-      uses: mattwithoos/kusteval@master
+      uses: mattwithoos/kusteval@main
