--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -15,9 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Kusteval FAIL test
+      if: success() || failure()
       uses: mattwithoos/kusteval@main
       with:
         kustomize_ver: '4.5.7'
         target_dir: './tests/overlays/fail-test'
-      if: ${{ failure() }}
-      run: return 0
