snatch the error code from the trap frame

--- a/tests/base/config/nginx-config.yaml
+++ b/tests/base/config/nginx-config.yaml
@@ -13,7 +13,7 @@ data:
             charset utf-8;
 
             location / {
-                return 200;v
+                return 200;
             }
         }
     }
