--- a/tests/base/deployment.yaml
+++ b/tests/base/deployment.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
       name: some-microservice
   template:
-    metadata:
+    spec:
       containers:
         - name: nginx
           image: nginx:1.19.2-alpine
